kuber_labs/ingress_egress/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: zelhat/k8s-web-to-nginx:v2.0.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - containerPort: 5000
      restartPolicy: Always
