kuber_labs/ingress_egress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 5000
