kuber_labs/ingress_egress/egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-policy
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: my-app
  ingress:
    - ports:
        - port: 5000
      from:
        - namespaceSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 104.21.59.19/32
    - to:
        - ipBlock:
            cidr: 172.67.167.151/32
